-----------------------------
Changes in 1.7.2 (??.??.2010)

 - Fix image creation from texture, found by dataslayer

 - Fix crashes when taking Screenhots for DirectX in Windowed mode (thx to agamemnus for reporting)

 - StaticText does now serialize the background color

 - Fix gui-elements which didn't care when skin-colors changed. That made it impossible to make the gui slowly transparent (thx to PI for reporting). 
 Note that it couldn't be completely fixed for the SpinBox without breaking the interface, so for that element you have to enforce this by calling for example element->setValue(element->getValue()) once.

 - Fix CXMLReaderImpl::getAttributeValueAsInt which returned wrong values with large integers (thx to squisher for finding)
 
 - Add EGET_TREEVIEW_NODE_COLLAPSE and deprecate EGET_TREEVIEW_NODE_COLLAPS (found by greenya)
 
 - Fix compile problem in swap when using irrlicht in combination with stl (backport from trunk r3281)

 - Fix serialization in CParticleSystemSceneNode (found by B@z)

 - Prevent crash in BillboardTextSceneNode when a custom font is used. Found and fixed by Nalin (bugtracker id: 3020487)

 - Fix problem in animation system that currentFrame got messed up after long pauses (especially when not starting at frame 0).
   See forum thread (http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?p=210537#210537) and bug id 2898876.
   Also remove BeginFrameTime in CAnimatedMeshSceneNode as it hasn't been used anymore since some time.

 - Add framerate and current frame information for animations in example 09 and do some minor cleanup.
 
 - Added another test for xml-reader.
 
 - Fix serialization in several particle emitters and affectors (thx to Ion Dune for reporting).
 
 - Fix compile-error on VS for vector2d::getAngleTrig when used with integers. (thx to greenya for reporting)
 